--- a/style.css
+++ b/style.css
@@ -424,6 +424,17 @@
   .popular-list,
   .popular-list > li:not(:last-child) { margin-bottom: 30px; }
   
+
+  .popular-list-container {
+  display: flex;
+}
+
+.popular-list {
+  flex: 1;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
   .popular-card {
     position: relative;
     overflow: hidden;
@@ -433,6 +444,8 @@
   
   .popular-card .card-img { height: 100%; }
   
+
+
   .popular-card .card-img img {
     width: 100%;
     height: 100%;
