cairo .html done and form of booking

--- a/public/css/cairo.css
+++ b/public/css/cairo.css
@@ -1,10 +1,32 @@
-.destination-header {
+.container {
     position: relative;
+    width: 100%; /* Ensure the container spans the full width */
+    max-width: 1990px; /* Limit the maximum width of the container */
+    background: ;
+  }
+
+  .image {
+    
+    width: 100%;
+    height: auto; /* Maintain aspect ratio */
     display: block;
-    box-sizing: border-box;
-    width: calc(100% - 80px);
-    height: 460px;
-    min-height: 40vh;
-    padding: 95px 60px 55px;
-    background-position: center;
-    background-size: cover;
+  }
+
+  .text-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    z-index: 1; /* Ensure the text is above the image */
+  }
+  .hyperlink{
+    font-size: larger;
+    color: brown;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: block;
+    text-align: center;
+  }
