--- a/public/css/alex.css
+++ b/public/css/alex.css
@@ -13,12 +13,13 @@
   }
 
   .text-overlay {
+    background-color: aliceblue;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
-    font-size: 24px;
+    color: black;
+    font-size: 40px;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     z-index: 1; /* Ensure the text is above the image */
