--- a/public/css/bookingform.css
+++ b/public/css/bookingform.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: #78350f !important;
   }
 
   .container {
@@ -8,6 +9,8 @@ body {
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+  background-color: #fef3c7;
+  color: #1c1917;
   }
 
   .form-group {
