added nodejs and dependancies and putting stuff in the correct folder / using partials

--- a/pages/adminstuff/partials/addcli.ejs
+++ b/pages/adminstuff/partials/addcli.ejs
@@ -10,9 +10,9 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../public/css/general.css" />
+    <link rel="stylesheet" href="/css/general.css" />
 
-    <link rel="stylesheet" href="../../public/css/admin.css" />
+    <link rel="stylesheet" href="/css/admin.css" />
   
   </head>
 
@@ -53,6 +53,6 @@
     ></script>
 
 
-    <script  src="../../public/js/editclient.js"></script>
+    <script  src="/js/admin_js/editclient.js"></script>
   </body>
 </html>
