--- a/pages/adminstuff/partials/editPKG.ejs
+++ b/pages/adminstuff/partials/editPKG.ejs
@@ -10,11 +10,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../public/css/general.css" />
+    <link rel="stylesheet" href="/css/general.css" />
 
-    <link rel="stylesheet" href="../../public/css/admin.css" />
+    <link rel="stylesheet" href="/css/admin.css" />
     <!-- chart js script -->
-    <script async src="../../public/js/editpackage.js"></script>
+    <script async src="/js/admin_js/editpackage.js"></script>
   </head>
 
   <body>
