--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,4 +1,4 @@
-@import url(public/css/general.css);
+@import url(/css/general.css);
 /*getting colors       --light-blue :#19C7FF;
                         --dark-orange:#BF8143;
                         --blue:#4993AB;
