--- a/pages/adminstuff/partials/removecli.ejs
+++ b/pages/adminstuff/partials/removecli.ejs
@@ -10,9 +10,9 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../public/css/general.css" />
+    <link rel="stylesheet" href="/css/general.css" />
 
-    <link rel="stylesheet" href="../../public/css/admin.css" />
+    <link rel="stylesheet" href="/css/admin.css" />
     <!-- chart js script -->
     <!--This page is to be loaded after successful admin login from @FatmaNageh-->
   </head>
@@ -42,6 +42,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="../../public/js/editclient.js"></script>
+    <script src="/js/admin_js/editclient.js"></script>
   </body>
 </html>
