--- a/pages/main/bookingForm.ejs
+++ b/pages/main/bookingForm.ejs
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>booking form</title>
-<link rel="stylesheet" href="..\public\css\bookingform.css">
+<link rel="stylesheet" href="/css/bookingform.css">
  </head>
 <body>
 <div class="container">
@@ -32,5 +32,5 @@
   </div>
 
 
-  <script src="public\js\bookingform.js"></script>
+  <script src="/js/bookingform.js"></script>
 </body>
