organizing files and folders and tried to make main page routing work , will add bootstrap custom colors using SASS soon!

--- a/pages/main/bookingForm.ejs
+++ b/pages/main/bookingForm.ejs
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>booking form</title>
-<link rel="stylesheet" href="/css/bookingform.css">
+href="/css/main/bookingform.css"
  </head>
 <body>
 <div class="container">
