--- a/pages/main/partials/navbar.ejs
+++ b/pages/main/partials/navbar.ejs
@@ -11,7 +11,7 @@
           <div class="navbar-top">
 
             <a href="#" class="logo">
-              <img src="./assets/images/logo-blue.svg" alt="Tourly logo">
+              <img src="/assets/images/logo-blue.svg" alt="Tourly logo">
             </a>
 
             <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
@@ -23,32 +23,32 @@
           <ul class="navbar-list">
 
             <li>
-              <a href="#home" class="navbar-link" data-nav-link>home</a>
+              <a href="/" class="navbar-link" data-nav-link>home</a>
             </li>
 
             <li>
-              <a href="#about-us" class="navbar-link" data-nav-link>about us</a>
+              <a href="/#about" class="navbar-link" data-nav-link>about us</a>
             </li>
 
             <li>
-              <a href="#daily-tours" class="navbar-link" data-nav-link>hot deals</a>
+              <a href="/#daily-tours" class="navbar-link" data-nav-link>hot deals</a>
             </li>
 
             <li>
-              <a href="#packages" class="navbar-link" data-nav-link>packages</a>
+              <a href="/#packages" class="navbar-link" data-nav-link>packages</a>
             </li>
             <li>
-              <a href="hot deals" class="navbar-link" data-nav-link>hot deals</a>
+              <a href="/#hotdeals" class="navbar-link" data-nav-link>hot deals</a>
             </li>
             <li>
-              <a href="#footer" class="navbar-link" data-nav-link>contact us</a>
+              <a href="/#footer" class="navbar-link" data-nav-link>contact us</a>
             </li>
 
           </ul>
 
         </nav>
-        <button ><a href = "register.html"class="btn btn-primary"> login</a></button>
-        <button ><a href = "signup.html"class="btn btn-primary"> signup</a></button>
+        <button ><a href = "register"class="btn btn-primary"> login</a></button>
+        <button ><a href = "signup"class="btn btn-primary"> signup</a></button>
 
 
       </div>
