--- a/pages/main/signup.ejs
+++ b/pages/main/signup.ejs
@@ -88,11 +88,7 @@
 <body>
 
 <section class="hero">
-    <div class="video-wrapper">
-        <video class="video-blog" autoplay muted loop>
-            <source src="046dd42a4e576ddb146cb2aed847479e.mp4" type="video/mp4">
-        </video>
-    </div>
+ <%- include('partials/video')%>
     <div class="form-container">
         <h2>Sign up</h2>
         <form action="thank-you.html" method="POST">
