--- a/pages/adminstuff/1admin.ejs
+++ b/pages/adminstuff/1admin.ejs
@@ -10,14 +10,14 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/common/general.css" />
 
     <link rel="stylesheet" href="/css/admin.css" />
     <!-- chart js script -->
     <script async src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!--This page is to be loaded after successful admin login from @FatmaNageh-->
-    <script async src="/js/admin.js"></script>
+    <script async src="/js/admin_js/admin.js"></script>
   </head>
 
   <body>
