--- a/pages/adminstuff/partials/addcli.ejs
+++ b/pages/adminstuff/partials/addcli.ejs
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/common/general.css" />
 
     <link rel="stylesheet" href="/css/admin.css" />
   
