--- a/pages/main/partials/footer.ejs
+++ b/pages/main/partials/footer.ejs
@@ -2,7 +2,7 @@
     <section class="footer" id="footer">
         <div class="container">
             <div class="detail">
-                <h3>TravelX</h3>
+                <h3>EgyptExploreHub</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere in, non praesentium soluta quis enim aperiam aliquam, rem totam porro, vel obcaecati modi architecto error maiores iusto quaerat aut eum.</p>
                 <h5>get in touch</h5>
                 <a href="#">example@mail.com</a>
@@ -38,7 +38,7 @@
   
         <div class="copyright">
             <div>
-                &copy;2024 - TravelX, inc, all rights reserved
+                &copy;2024 - EgyptExploreHub, all rights reserved
             </div>
             <div>
                 <a href="#">term & conditions</a>
