added more partials (head) and routing files and configured bootstrap custom colors with SASS, added recommended extensions and split the footer css into its own file

--- a/pages/main/index.ejs
+++ b/pages/main/index.ejs
@@ -1,34 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<%- include('partials/head') %>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EgyptExploreHub. - Travel agency</title>
-
-  <!-- 
-    - favicon
-  -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
-
-  <!-- 
-    - custom css link
-  -->
-  <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
-  <link rel="stylesheet" href="/css/main/style.css">
-  
   <script defer src="/js/main/arrow.js"></script>
-
-  <!-- 
-    - google font link
-  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
- 
 </head>
 
 <body id="top">
@@ -291,7 +266,7 @@
         
       </li>
       <li>
-        <img src="assets/images/download.jpeg" alt="">
+        <img src="/assets/images/download.jpeg" alt="">
         <p>Best Of Cairo 3 Tour</p>
       </li>
       <li>
@@ -717,7 +692,7 @@ emergencies </p>
 
 
  <!-- footer section starts here  -->
-<%- include('partials/footer') %>
+  <%- include('partials/footer') %>
 <!-- footer section ends here  -->
 
   <!-- 
