--- a/pages/main/partials/footer.ejs
+++ b/pages/main/partials/footer.ejs
@@ -1,3 +1,4 @@
+
 <footer>
     <section class="footer" id="footer">
         <div class="container">
@@ -13,26 +14,25 @@
                 </div>
             </div>
             <div class="about-us">
-                <h4>about us</h4>
-                <li><a href="#">about us</a></li>
-                <li><a href="#">our term</a></li>
-                <li><a href="#">careers <span>we're hiring!</span></a></li>
-                <li><a href="#">mission and values</a></li>
-                <li><a href="#">partnerships</a></li>
+                <h4><a href="/#about">About us</a></h4>
+                <li><a href="/#about">About us</a></li>
+                
+                <li><a href="#">Mission and values</a></li>
+                <li><a href="#">Partnerships</a></li>
             </div>
             <div class="about-us">
                 <h4>help</h4>
                 <li><a href="#">FAQ</a></li>
-                <li><a href="#">booking guide</a></li>
-                <li><a href="#">cancellation policy</a></li>
-                <li><a href="#">site map</a></li>
+                <li><a href="#">Booking guide</a></li>
+                <li><a href="#">Cancellation policy</a></li>
+            
             </div>
             <div class="about-us">
                 <h4>Resources</h4>
-                <li><a href="#">newsletter</a></li>
-                <li><a href="#">blog</a></li>
-                <li><a href="#">gallery</li>
-                <li><a href="#">offers</a></li>
+                <li><a href="#">Newsletter</a></li>
+                
+                <li><a href="#">Gallery</li>
+                <li><a href="/#daily-tours">Offers</a></li>
             </div>
         </div>
   
