--- a/pages/main/partials/navbar.ejs
+++ b/pages/main/partials/navbar.ejs
@@ -47,8 +47,8 @@
           </ul>
 
         </nav>
-        <button ><a href = "register"class="btn btn-primary"> login</a></button>
-        <button ><a href = "signup"class="btn btn-primary"> signup</a></button>
+        <button class="navLog" ><a href = "register"class="btn btn-primary"> login</a></button>
+        <button class="navLog" ><a href = "signup"class="btn btn-primary"> signup</a></button>
 
 
       </div>
