--- a/pages/adminstuff/1admin.ejs
+++ b/pages/adminstuff/1admin.ejs
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Admin Panel</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/common/general.css" />
-
-    <link rel="stylesheet" href="/css/admin.css" />
-    <!-- chart js script -->
-    <script async src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    
-    <!--This page is to be loaded after successful admin login from @FatmaNageh-->
-    <script async src="/js/admin_js/admin.js"></script>
-  </head>
+<%- include('partials/head') %>
+    <head><script async src="/js/admin_js/admin.js"></script>
+     <link rel="stylesheet" href="/css/admin/admin.css" />
+    </head>
 
   <body>
     <%- include('partials/nav') %>
@@ -54,7 +39,7 @@
                 <blockquote class="blockquote usrquote">
                   <p>Beautiful country! ♥♥</p>
                 </blockquote>
-                <figcaption class="blockquote-footer">
+                <figcaption class="blockquote-footer bg-altdark">
                   5🌟 <cite title="Source Title">Salma -> SIWA</cite>
                 </figcaption>
               </figure>
@@ -107,11 +92,6 @@
       </main>
     </section>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-   
+    
   </body>
 </html>
