--- a/pages/adminstuff/editpackage.ejs
+++ b/pages/adminstuff/editpackage.ejs
@@ -1,23 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Panel</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/common/general.css" />
-
-    <link rel="stylesheet" href="/css/admin.css" />
-    <!-- chart js script -->
-    <!--This page is to be loaded after successful admin login from @FatmaNageh-->
-<link rel="stylesheet" href="/css/formstuff.css">
-<script async src="/js/admin_js/editpackage.js"></script>
+ <%- include('partials/head') %>
   </head>
+<head><script async src="/js/admin_js/editpackage.js"></script></head>
 
   <body>
     <%- include('partials/nav') %>
@@ -56,20 +41,16 @@
           <div class="col  py-5">
             <!-- iframe here -->
 <div class="py-3"></div>
-<iframe frameborder="2" id="frame"  title="myframe"></iframe>
+<div class="ratio ratio-1x1">
 
+<iframe frameborder="2" id="frame"  title="myframe" allowfullscreen></iframe>
+</div>
 
           </div>
         </div>
       </div>
     </section>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-
-    
+ 
   </body>
 </html>
