--- a/pages/adminstuff/partials/removePKG.ejs
+++ b/pages/adminstuff/partials/removePKG.ejs
@@ -1,22 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Panel</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/general.css" />
-
-    <link rel="stylesheet" href="css/admin.css" />
-    <!-- chart js script -->
-    <!--This page is to be loaded after successful admin login from @FatmaNageh-->
-  </head>
-
+  <%- include('head') %>
   <body>
     <form class="dark mb-3 px-5">
         <div class="input-group mb-3 px-5">
@@ -37,10 +21,6 @@
       </button> 
     </form>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+   
   </body>
 </html>
