--- a/pages/main/register.ejs
+++ b/pages/main/register.ejs
@@ -153,6 +153,9 @@ button {
   border: 2px solid transparent;
   transition: 0.3s ease;
 }
+button.navLog{
+  background: transparent;
+}
 
 button:hover {
   color: #fff;
