--- a/pages/main/signup.ejs
+++ b/pages/main/signup.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form on Video</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+   
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -84,9 +82,11 @@
             cursor: pointer;
         }
     </style>
+   
 </head>
+<%- include('partials/head') %>
 <body>
-
+<%- include('partials/navbar') %>
 <section class="hero">
  <%- include('partials/video')%>
     <div class="form-container">
@@ -123,6 +123,6 @@
         </form>
     </div>
 </section>
-
+<%- include('partials/footer') %>
 </body>
 </html>
