added ACTUAL color pallete with bootstrap sass file from the home page

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -7,13 +7,14 @@
 //overwrite variables here then use the live sass compiler extension to 'watch' and compile sass and the magic begins    
 $primary: #c9933b
 $light: #fbf5e5
-
+$secondary:#443922
+$info:#d09a58
 // import the functions & variables
 @import "../node_modules/bootstrap/scss/_functions" 
 @import "../node_modules/bootstrap/scss/_variables" 
 
 // new custom theme colours
-$custom-theme-colors: ("altlight": #f2ebfa,"altdark": #522192,"lightblue": #19C7FF, "darkorange":#BF8143, "blue":#4993AB, "brown":#80664D, "greyblue":#414F54,)
+$custom-theme-colors: ( "darkorange":#BF8143, "brown":#80664D, "greyblue":#414F54,"gray":#333333 , "yellow":#ffdf87 ,"black": #000000 )
  
 
 // merge the maps to add new theme colors
