--- a/pages/adminstuff/partials/addPKG.ejs
+++ b/pages/adminstuff/partials/addPKG.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
  <%- include('head') %>
   <body>
-    <form class="dark mb-3 px-5">
+    <form class="dark mb-3 px-5" method="POST" action="/admin/addpkg_post">
       <div class="mb-3 px-5 pt-5">
         <div class="form-floating">
         <input type="text" class="form-control" id="name" required />
@@ -41,7 +41,7 @@
         </div>
       </div>
 
-      <button type="submit" class="btn px-5 py-2 mx-5 my-2 btn-primary">
+      <button type="submit" class="btn px-5 py-2 mx-5 my-2 btn-primary"   >
         Submit
       </button>
     </form>
