edit client view still doesnt work

--- a/pages/adminstuff/clientIndex.ejs
+++ b/pages/adminstuff/clientIndex.ejs
@@ -3,7 +3,7 @@
   <%- include('partials/head') %>
 
   <head>
-    <link rel="stylesheet" href="/css/formstuff.css" />
+    <link rel="stylesheet" href="/css/admin/formstuff.css" />
   </head>
 
   <body>
@@ -43,6 +43,7 @@
               >
             </div>
           </div>
+          
 
           <div class="col py-5">
             <!-- iframe here -->
@@ -58,7 +59,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/editpackage.js"></script>
-    <script src="/js/editclient.js"></script>
+    <script src="/js/admin_js/editpackage.js"></script>
+    <script src="/js/admin_js/editclient.js"></script>
   </body>
 </html>
