--- a/pages/adminstuff/clientIndex.ejs
+++ b/pages/adminstuff/clientIndex.ejs
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <%- include('partials/nav) %>
+    <%- include('partials/nav') %>
     <section id="select">
       <div class="container-md">
         <div class="row gx-5">
