--- a/pages/main/register.ejs
+++ b/pages/main/register.ejs
@@ -197,23 +197,26 @@ button:hover {
     <form action="#">
       <h2>Login</h2>
         <div class="input-field">
-        <input type="text" required>
+        <input type="email" name="email" required>
         <label>Enter your email</label>
       </div>
       <div class="input-field">
-        <input type="password" required>
+        <input type="password" name="password" required>
         <label>Enter your password</label>
       </div>
       <div class="forget">
         <label for="remember">
-          <input type="checkbox" id="remember">
+          <input type="checkbox" id="remember" name="remember">
           <p>Remember me</p>
         </label>
         <a href="#">Forgot password?</a>
+       
       </div>
+
       <button type="submit">Log In</button>
       <div class="register">
-        <p>Don't have an account? <a href="signup.html">Register</a></p>
+        <p>Don't have an account? <div style="padding-top: 0.5rem;"></div><a href="/signup">Register</a></p> 
+       
       </div>
     </form>
   </div>
