--- a/pages/main/signup.ejs
+++ b/pages/main/signup.ejs
@@ -89,7 +89,7 @@
       <%- include('partials/video')%>
       <div class="form-container">
         <h2>Sign up</h2>
-        <form action="thank-you.html" method="POST">
+        <form action="/signup" method="POST">
           <div class="form-group">
             <label for="fullname">Full Name</label>
             <input
@@ -99,6 +99,7 @@
               placeholder="Enter your full name"
               required
             />
+            <div id="fullnameErr"></div>
           </div>
           <div class="form-group">
             <label for="email">Email Address</label>
@@ -109,6 +110,7 @@
               placeholder="Enter your email address"
               required
             />
+           <div id="emailErr"></div>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
@@ -119,10 +121,12 @@
               placeholder="Enter your password"
               required
             />
+            <div id="passErr"></div>
           </div>
           <div class="form-group">
             <label for="birthday">Birth Date</label>
             <input type="date" id="date" name="birthday" required />
+            <div id="birthdayErr"></div>
           </div>
           <div class="form-group">
             <label for="gender">Gender</label>
@@ -131,6 +135,7 @@
               <option value="Male">Male</option>
               <option value="Female">Female</option>
             </select>
+            <div id="genderErr"></div>
           </div>
           <div class="form-group">
             <label for="newsletter" style="display: inline-block; position: relative;" 
@@ -140,7 +145,9 @@
                 id="newsletter"
                 name="newsletter"
            style="position: absolute; right: -115%; top: 25% ;"
+          
               />
+
             </label>
           </div>
           <div class="form-group submit-btn">
@@ -150,5 +157,7 @@
       </div>
     </section>
     <%- include('partials/footer') %>
+<script src="/js/main/signup.js"></script>
+
   </body>
 </html>
