disaster averted thanks to @Zeyad-Tantawy1 and @FatmaNageh ALWAYS HAVE BACKUPS

--- a/pages/adminstuff/1admin.ejs
+++ b/pages/adminstuff/1admin.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('partials/head') %>
-    <head><script async src="/js/admin_js/admin.js"></script>
-     <link rel="stylesheet" href="/css/admin/admin.css" />
+    <head><script defer src="/js/admin_js/admin.js"></script>
+     <!-- <link rel="stylesheet" href="/css/admin/admin.css" /> -->
     </head>
 
-  <body>
+  <body class="bg-gray">
     <%- include('partials/nav') %>
     <!-- main grid -->
     <section id="content">
