--- a/pages/adminstuff/partials/head.ejs
+++ b/pages/adminstuff/partials/head.ejs
@@ -3,12 +3,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title><%= title %></title>
   <!-- bootstrap css -->
+    <link
+      rel="stylesheet"
+     href="css/admin/admin.css"
+    />
   <link rel="stylesheet" href="/css/common/main.css" /> 
-  <link rel="stylesheet" href="/css/common/general.css" />
-  <link rel="stylesheet" href="/css/admin/admin.css" />
-
-  <!-- chart js script -->
-  <script async src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  
   <!-- bootstrap js -->
   <script
     defer
@@ -16,4 +16,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
+ 
+
+  <!-- chart js script -->
+  <script async src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
