--- a/pages/adminstuff/partials/nav.ejs
+++ b/pages/adminstuff/partials/nav.ejs
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-md navbar-dark border-bottom 1">
     <div class="container-sm">
       <b
-        class="navbar-toggler border border-0 bg-muted"
+        class="navbar-toggler border border-0 bg-greyblue"
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#main-nav"
-        style="background-color: #51a3b4"
+       
       >
         <span class="navbar-toggler-icon navbar-toggler-icon-bg"></span>
       </b>
@@ -19,7 +19,7 @@
               href="/admin/analytics"
               class="link-underline link-underline-opacity-0"
             >
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 570 570">
                 <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                 <path
                   fill="#FFD43B"
@@ -34,7 +34,7 @@
               href="/admin/editclient"
               class="link-underline link-underline-opacity-0"
             >
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 570 570" >
                 <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                 <path
                   fill="#FFD43B"
@@ -50,7 +50,7 @@
               href="/admin/editPackage"
               class="link-underline link-underline-opacity-0"
             >
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 570 570">
                 <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                 <path
                   fill="#FFD43B"
@@ -65,7 +65,7 @@
               href="/"
               class="link-underline link-underline-opacity-0"
             >
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 570 570">
                 <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                 <path
                   fill="#FFD43B"
@@ -81,7 +81,7 @@
               href="/admin"
               class="link-underline link-underline-opacity-0"
             >
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 570 570">
                 <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                 <path
                   fill="#FFD43B"
