--- a/pages/adminstuff/editpackage.ejs
+++ b/pages/adminstuff/editpackage.ejs
@@ -4,7 +4,7 @@
   </head>
 <head><script async src="/js/admin_js/editpackage.js"></script></head>
 
-  <body>
+  <body class="bg-gray">
     <%- include('partials/nav') %>
     <section id="select">
       <div class="container-md">
@@ -21,6 +21,8 @@
               <label class="btn btn-outline-danger" for="vbtn-radio2">Edit Package</label>
               <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio3"  onclick="removePKG()">
               <label class="btn btn-outline-danger" for="vbtn-radio3">Remove Package</label>
+              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio4"  onclick="viewPKG()">
+              <label class="btn btn-outline-danger" for="vbtn-radio4">View Packages</label>
             </div>
 
 
