--- a/pages/adminstuff/menus/client/addcli.ejs
+++ b/pages/adminstuff/menus/client/addcli.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('partials/head') %>
+  <%- include('../../partials/head') %>
   <body>
     <form class="dark mb-3 px-5" action= return validateNewClient() id="clientForm">
       <div class="mb-3 px-5 pt-5">
