--- a/pages/adminstuff/menus/pkg/addPKG.ejs
+++ b/pages/adminstuff/menus/pkg/addPKG.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('head') %>
+  <%- include('../../partials/head') %>
   <body>
     <form class="dark mb-3 px-5" method="POST" action="/admin/addpkg_post">
       <div class="mb-3 px-5 pt-5">
