--- a/pages/adminstuff/menus/pkg/editPKG.ejs
+++ b/pages/adminstuff/menus/pkg/editPKG.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('head') %>
+  <%- include('../../partials/head') %>
 <head><script async src="/js/admin_js/editpackage.js"></script></head>
   <body>
     <form class="dark mb-3 px-5">
