--- a/pages/adminstuff/menus/pkg/removePKG.ejs
+++ b/pages/adminstuff/menus/pkg/removePKG.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('head') %>
+  <%- include('../../partials/head') %>
   <body>
     <form class="dark mb-3 px-5">
         <div class="input-group mb-3 px-5">
